@@ -14,7 +14,7 @@ if(NOT RET EQUAL 0)
 endif()
 execute_process(COMMAND ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/properties/parser_wrapper.py ${CMAKE_BINARY_DIR}/contrib/libcss/properties ${CMAKE_BINARY_DIR}/contrib/libcss/gen_parser/gen_parser ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/properties/properties.gen RESULT_VARIABLE RET)
 if(NOT RET EQUAL 0)
-	message(FATAL_ERROR "libcss parser_wrapper.sh failed (error ${RET})")
+	message(FATAL_ERROR "libcss parser_wrapper.py failed (error ${RET})")
 endif()
 
 execute_process(COMMAND python3 ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/select_generator.py ${CMAKE_BINARY_DIR} RESULT_VARIABLE RET)
