@@ -1,0 +1,325 @@
+CFLAGS += -Isrc -I. -fPIC
+
+AUTOGENERATED_PARSER =	autogenerated_align_content.c \
+			autogenerated_align_items.c \
+			autogenerated_align_self.c \
+			autogenerated_background_attachment.c \
+			autogenerated_background_color.c \
+			autogenerated_background_image.c \
+			autogenerated_background_repeat.c \
+			autogenerated_border_bottom.c \
+			autogenerated_border_bottom_color.c \
+			autogenerated_border_bottom_style.c \
+			autogenerated_border_bottom_width.c \
+			autogenerated_border_collapse.c \
+			autogenerated_border_left.c \
+			autogenerated_border_left_color.c \
+			autogenerated_border_left_style.c \
+			autogenerated_border_left_width.c \
+			autogenerated_border_right.c \
+			autogenerated_border_right_color.c \
+			autogenerated_border_right_style.c \
+			autogenerated_border_right_width.c \
+			autogenerated_border_side_color.c \
+			autogenerated_border_side_style.c \
+			autogenerated_border_side_width.c \
+			autogenerated_border_top.c \
+			autogenerated_border_top_color.c \
+			autogenerated_border_top_style.c \
+			autogenerated_border_top_width.c \
+			autogenerated_bottom.c \
+			autogenerated_box_sizing.c \
+			autogenerated_break_after.c \
+			autogenerated_break_before.c \
+			autogenerated_break_inside.c \
+			autogenerated_caption_side.c \
+			autogenerated_clear.c \
+			autogenerated_color.c \
+			autogenerated_column_count.c \
+			autogenerated_column_fill.c \
+			autogenerated_column_gap.c \
+			autogenerated_column_rule_color.c \
+			autogenerated_column_rule_style.c \
+			autogenerated_column_rule_width.c \
+			autogenerated_column_span.c \
+			autogenerated_column_width.c \
+			autogenerated_counter_increment.c \
+			autogenerated_counter_reset.c \
+			autogenerated_cue_after.c \
+			autogenerated_cue_before.c \
+			autogenerated_direction.c \
+			autogenerated_display.c \
+			autogenerated_empty_cells.c \
+			autogenerated_flex_basis.c \
+			autogenerated_flex_direction.c \
+			autogenerated_flex_grow.c \
+			autogenerated_flex_shrink.c \
+			autogenerated_flex_wrap.c \
+			autogenerated_float.c \
+			autogenerated_font_size.c \
+			autogenerated_font_style.c \
+			autogenerated_font_variant.c \
+			autogenerated_height.c \
+			autogenerated_justify_content.c \
+			autogenerated_left.c \
+			autogenerated_letter_spacing.c \
+			autogenerated_line_height.c \
+			autogenerated_list_style_image.c \
+			autogenerated_list_style_position.c \
+			autogenerated_margin_bottom.c \
+			autogenerated_margin_left.c \
+			autogenerated_margin_right.c \
+			autogenerated_margin_side.c \
+			autogenerated_margin_top.c \
+			autogenerated_max_height.c \
+			autogenerated_max_width.c \
+			autogenerated_min_height.c \
+			autogenerated_min_width.c \
+			autogenerated_order.c \
+			autogenerated_orphans.c \
+			autogenerated_outline_color.c \
+			autogenerated_outline_style.c \
+			autogenerated_outline_width.c \
+			autogenerated_overflow_x.c \
+			autogenerated_overflow_y.c \
+			autogenerated_padding_bottom.c \
+			autogenerated_padding_left.c \
+			autogenerated_padding_right.c \
+			autogenerated_padding_side.c \
+			autogenerated_padding_top.c \
+			autogenerated_page_break_after.c \
+			autogenerated_page_break_before.c \
+			autogenerated_page_break_inside.c \
+			autogenerated_pause_after.c \
+			autogenerated_pause_before.c \
+			autogenerated_pitch.c \
+			autogenerated_pitch_range.c \
+			autogenerated_position.c \
+			autogenerated_richness.c \
+			autogenerated_right.c \
+			autogenerated_side.c \
+			autogenerated_speak.c \
+			autogenerated_speak_header.c \
+			autogenerated_speak_numeral.c \
+			autogenerated_speak_punctuation.c \
+			autogenerated_speech_rate.c \
+			autogenerated_stress.c \
+			autogenerated_table_layout.c \
+			autogenerated_text_align.c \
+			autogenerated_text_indent.c \
+			autogenerated_text_transform.c \
+			autogenerated_top.c \
+			autogenerated_unicode_bidi.c \
+			autogenerated_vertical_align.c \
+			autogenerated_visibility.c \
+			autogenerated_volume.c \
+			autogenerated_white_space.c \
+			autogenerated_widows.c \
+			autogenerated_width.c \
+			autogenerated_word_spacing.c \
+			autogenerated_writing_mode.c \
+			autogenerated_z_index.c
+
+AUTOGENERATED_SELECT =	autogenerated_computed.h \
+			autogenerated_propget.h \
+			autogenerated_propset.h
+
+OBJS =	src/stylesheet.o \
+	src/charset/detect.o \
+	src/lex/lex.o \
+	src/parse/parse.o \
+	src/parse/language.o \
+	src/parse/important.o \
+	src/parse/propstrings.o \
+	src/parse/font_face.o \
+	src/parse/mq.o \
+	src/parse/properties/azimuth.o \
+	src/parse/properties/background.o \
+	src/parse/properties/background_position.o \
+	src/parse/properties/border.o \
+	src/parse/properties/border_color.o \
+	src/parse/properties/border_spacing.o \
+	src/parse/properties/border_style.o \
+	src/parse/properties/border_width.o \
+	src/parse/properties/clip.o \
+	src/parse/properties/columns.o \
+	src/parse/properties/column_rule.o \
+	src/parse/properties/content.o \
+	src/parse/properties/cue.o \
+	src/parse/properties/cursor.o \
+	src/parse/properties/elevation.o \
+	src/parse/properties/flex.o \
+	src/parse/properties/flex_flow.o \
+	src/parse/properties/font.o \
+	src/parse/properties/font_family.o \
+	src/parse/properties/font_weight.o \
+	src/parse/properties/list_style.o \
+	src/parse/properties/list_style_type.o \
+	src/parse/properties/margin.o \
+	src/parse/properties/opacity.o \
+	src/parse/properties/outline.o \
+	src/parse/properties/overflow.o \
+	src/parse/properties/padding.o \
+	src/parse/properties/pause.o \
+	src/parse/properties/play_during.o \
+	src/parse/properties/properties.o \
+	src/parse/properties/quotes.o \
+	src/parse/properties/text_decoration.o \
+	src/parse/properties/utils.o \
+	src/parse/properties/voice_family.o \
+	$(addsuffix .o,$(basename $(AUTOGENERATED_PARSER))) \
+	src/select/properties/helpers.o \
+	src/select/properties/align_content.o \
+	src/select/properties/align_items.o \
+	src/select/properties/align_self.o \
+	src/select/properties/azimuth.o \
+	src/select/properties/background_attachment.o \
+	src/select/properties/background_color.o \
+	src/select/properties/background_image.o \
+	src/select/properties/background_position.o \
+	src/select/properties/background_repeat.o \
+	src/select/properties/border_bottom_color.o \
+	src/select/properties/border_bottom_style.o \
+	src/select/properties/border_bottom_width.o \
+	src/select/properties/border_collapse.o \
+	src/select/properties/border_left_color.o \
+	src/select/properties/border_left_style.o \
+	src/select/properties/border_left_width.o \
+	src/select/properties/border_right_color.o \
+	src/select/properties/border_right_style.o \
+	src/select/properties/border_right_width.o \
+	src/select/properties/border_spacing.o \
+	src/select/properties/border_top_color.o \
+	src/select/properties/border_top_style.o \
+	src/select/properties/border_top_width.o \
+	src/select/properties/bottom.o \
+	src/select/properties/box_sizing.o \
+	src/select/properties/break_after.o \
+	src/select/properties/break_before.o \
+	src/select/properties/break_inside.o \
+	src/select/properties/caption_side.o \
+	src/select/properties/clear.o \
+	src/select/properties/clip.o \
+	src/select/properties/color.o \
+	src/select/properties/column_count.o \
+	src/select/properties/column_fill.o \
+	src/select/properties/column_gap.o \
+	src/select/properties/column_rule_color.o \
+	src/select/properties/column_rule_style.o \
+	src/select/properties/column_rule_width.o \
+	src/select/properties/column_span.o \
+	src/select/properties/column_width.o \
+	src/select/properties/content.o \
+	src/select/properties/counter_increment.o \
+	src/select/properties/counter_reset.o \
+	src/select/properties/cue_after.o \
+	src/select/properties/cue_before.o \
+	src/select/properties/cursor.o \
+	src/select/properties/direction.o \
+	src/select/properties/display.o \
+	src/select/properties/elevation.o \
+	src/select/properties/empty_cells.o \
+	src/select/properties/flex_basis.o \
+	src/select/properties/flex_direction.o \
+	src/select/properties/flex_grow.o \
+	src/select/properties/flex_shrink.o \
+	src/select/properties/flex_wrap.o \
+	src/select/properties/float.o \
+	src/select/properties/font_family.o \
+	src/select/properties/font_size.o \
+	src/select/properties/font_style.o \
+	src/select/properties/font_variant.o \
+	src/select/properties/font_weight.o \
+	src/select/properties/height.o \
+	src/select/properties/justify_content.o \
+	src/select/properties/left.o \
+	src/select/properties/letter_spacing.o \
+	src/select/properties/line_height.o \
+	src/select/properties/list_style_image.o \
+	src/select/properties/list_style_position.o \
+	src/select/properties/list_style_type.o \
+	src/select/properties/margin_bottom.o \
+	src/select/properties/margin_left.o \
+	src/select/properties/margin_right.o \
+	src/select/properties/margin_top.o \
+	src/select/properties/max_height.o \
+	src/select/properties/max_width.o \
+	src/select/properties/min_height.o \
+	src/select/properties/min_width.o \
+	src/select/properties/opacity.o \
+	src/select/properties/order.o \
+	src/select/properties/orphans.o \
+	src/select/properties/outline_color.o \
+	src/select/properties/outline_style.o \
+	src/select/properties/outline_width.o \
+	src/select/properties/overflow_x.o \
+	src/select/properties/overflow_y.o \
+	src/select/properties/padding_bottom.o \
+	src/select/properties/padding_left.o \
+	src/select/properties/padding_right.o \
+	src/select/properties/padding_top.o \
+	src/select/properties/page_break_after.o \
+	src/select/properties/page_break_before.o \
+	src/select/properties/page_break_inside.o \
+	src/select/properties/pause_after.o \
+	src/select/properties/pause_before.o \
+	src/select/properties/pitch.o \
+	src/select/properties/pitch_range.o \
+	src/select/properties/play_during.o \
+	src/select/properties/position.o \
+	src/select/properties/quotes.o \
+	src/select/properties/richness.o \
+	src/select/properties/right.o \
+	src/select/properties/speech_rate.o \
+	src/select/properties/speak.o \
+	src/select/properties/speak_header.o \
+	src/select/properties/speak_numeral.o \
+	src/select/properties/speak_punctuation.o \
+	src/select/properties/stress.o \
+	src/select/properties/table_layout.o \
+	src/select/properties/text_align.o \
+	src/select/properties/text_decoration.o \
+	src/select/properties/text_indent.o \
+	src/select/properties/text_transform.o \
+	src/select/properties/top.o \
+	src/select/properties/unicode_bidi.o \
+	src/select/properties/vertical_align.o \
+	src/select/properties/visibility.o \
+	src/select/properties/voice_family.o \
+	src/select/properties/volume.o \
+	src/select/properties/white_space.o \
+	src/select/properties/widows.o \
+	src/select/properties/width.o \
+	src/select/properties/word_spacing.o \
+	src/select/properties/writing_mode.o \
+	src/select/properties/z_index.o \
+	src/select/arena.o \
+	src/select/computed.o \
+	src/select/dispatch.o \
+	src/select/hash.o \
+	src/select/select.o \
+	src/select/strings.o \
+	src/select/font_face.o \
+	src/select/format_list_style.o \
+	src/select/unit.o \
+	src/utils/utils.o
+
+all: libcss.so
+
+gen_parser:
+	$(CC) src/parse/properties/gen_parser/css_property_parser_gen.c -o $@
+
+libcss.so: $(AUTOGENERATED_PARSER) $(AUTOGENERATED_SELECT) $(OBJS)
+	$(CC) -shared $(CFLAGS) $(LDFLAGS) $(OBJS) -o libcss.so
+
+$(AUTOGENERATED_PARSER) &: gen_parser
+	python3 src/parse/properties/parser_wrapper.py . ./gen_parser src/parse/properties/properties.gen
+
+$(AUTOGENERATED_SELECT) &:
+	python3 src/select/select_generator.py .
+
+$(OBJS): $(AUTOGENERATED_PARSER) $(AUTOGENERATED_SELECT)
+	$(CC) -c $(CFLAGS) $(LDFLAGS) $(addsuffix .c,$(basename $@)) -o $@
+
+clean:
+	rm -f gen_parser $(AUTOGENERATED_PARSER) $(AUTOGENERATED_SELECT) $(OBJS) libcss.so
