@@ -820,7 +820,7 @@ class CSSGroup:
             raise ValueError()
 
 css_groups = [ CSSGroup(g) for g in groups ]
-dir_path = sys.argv[1] + "/contrib/libcss"
+dir_path = sys.argv[1]
 
 for k, v in assets.items():
     # Key is filename string (e.g. "computed.h") without autogenerated_ prefix
