@@ -1,3 +1,7 @@
+17 - ...
+- Removed Zsh dependency
+- Deprecated CMake build system in favor of GNU Make
+
 16 - Sep 14 2023
 - Build fixes oriented at *BSD
 - Fixed compilation from a different directory
